--- a/src/x2.tex
+++ b/src/x2.tex
@@ -208,6 +208,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % commands like  \det
 
+\newcommand{\adj}{\operatorname{adj}}
 \newcommand{\End}{\operatorname{End}}
 \newcommand{\len}{\operatorname{len}}
 \newcommand{\tr}{\operatorname{tr}}
