--- a/src/a.tex
+++ b/src/a.tex
@@ -2752,14 +2752,14 @@ $\FFF'=\Set{\uu+\vv|\uu\in\KKK}$
 \end{proofof*}
 
 \begin{proofof}{adj:prod}
-  $AA'$を直接計算すると,
+  $A\tilde A$を直接計算すると,
   $(s,t)$成分は,
   \Cref{lem:cofac:expand}の
   \cref{lem:cofac:expand:item:row}の
   左辺である.
   よって, $\det(A)E_n$に等しいことがわかる.
 
-  また, $A'A$は
+  また, $\tilde A A$は
   \Cref{lem:cofac:expand}の
   \cref{lem:cofac:expand:item:col}に帰着できる.
   左辺である.
