--- a/src/p.tex
+++ b/src/p.tex
@@ -5958,7 +5958,7 @@ $(A-\lambda E_n) \xx=\zzero$
   $A$を$n$次正方行列とする.
   $x$に関する多項式
   \begin{align*}
-  \det(A-xE_2)
+  \det(A-xE_n)
   \end{align*}
   を
   \defit{$A$の固有多項式}
